# chemie-didaktik-muenster

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  cypress.config.ts  e2e.js  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  jest-setup.ts  jest.config.js  package-lock.json  package.json  pylintrc  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
.storybook/: main.js  preview.js
.storybook/__mocks__/: gatsby.js
.storybook/mocks/: gatsby-plugin-image.tsx  gatsby.js
.storybook/msw/: mockServiceWorker.js
analytics/: .gitignore  Procfile  README.md  compose.yml  main.py  migrate_from_csv.py  openapi.json  pylintrc  pyproject.toml  requirements.txt
analytics/.deta/: prog_info  state
analytics/backend/: README.md
analytics/backend/cdm_analytics/: domains.py  main.py  write_spec.py
analytics/backend/cdm_analytics/db_migrations/: cdm_analytics-0001-create-tables.sql
analytics/backend/tests/: test_integration.py
analytics/cdm_analytics/: auth.py  db.py  main.py  settings.py  write_spec.py
analytics/cdm_analytics/db_migrations/: cdm_analytics-0001-create-tables.sql  cdm_analytics-0002-create-user-table.sql
analytics/cdm_analytics/repositories/: click_counts.py  tracked.py  users.py
analytics/tests/: test_domains.py  test_integration.py
cypress/support/: index.js
migrations/: 001-detailsPage-multiple-videos.js
src/: .eslintrc.js  youtube-url-parser.d.ts  youtube-url-parser.js  youtube-url-parser.spec.ts
src/components/: AnalyticsTracker.tsx  AnimatedButton.js  AnimatedButton.tsx  Card.stories.tsx  Card.tsx  ConceptTitle.stories.tsx  ConceptTitle.tsx  InputField.stories.tsx  InputField.tsx  LocationContext.tsx  Message.stories.tsx  Message.tsx  Overlay.spec.tsx  Overlay.stories.tsx  Overlay.tsx  RichText.stories.tsx  RichText.tsx  SloganCarousel.stories.tsx  SloganCarousel.tsx  VideoBtn.tsx  breadcrumbs.tsx  btnLink.tsx  card.tsx  carousel.tsx  collapsible.tsx  conceptNav.tsx  crumbLink.tsx  faqBtnLink.tsx  footer.tsx  header.tsx  layout.js  layout.tsx  overlay.tsx  richText.tsx  seo.tsx  sideNav.tsx  sloganCarousel.tsx  video.tsx  youtubeConsent.tsx  youtubeVideo.tsx
src/hooks/: usePromise.spec.tsx  (+1 more)
(+169 files in other folders)
