[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
description = ""
license = "proprietary"
name = "cdm-analytics"
version = "1.0.0"

[tool.poetry.dependencies]
PyJWT = "^2.3.0"
aiohttp = "^3.8.3"
deta = {version = "1.1.0a2", extras = ["async"]}
fastapi = "^0.73.0"
oauthlib = "^3.2.0"
python = "^3.8"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^7.0.1"
requests = "^2.27.1"
types-requests = "^2.28.11"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['deta', 'oauthlib.oauth2']
